# songbook-tui

./: Cargo.toml  README.md  config-example.toml  shell.nix
assets/fingerings/: A#  A#5  A5  Ab  Ab5  B  B5  Bb  Bb5  Bm  C#  C#5  C#m  C5  Cm  D#  D#5  D#m  D5  Db  Db5  Dbm  E5  Eb  Eb5  Ebm  F#5  F#m  F5  G#  G#5  G5  Gb5  Gbm  Gm
src/: chord_fingerings.rs  chord_generator.rs  file_reader.rs  lib.rs  main.rs  song.rs  song_library.rs  tui.rs
src/chord_generator/: chord_fingerings.rs
src/core/: chord_generator.rs  file_reader.rs  lib.rs  song.rs  song_library.rs
src/core/chord_generator/: chord_fingerings.rs
src/core/file_reader/: chordpro_reader.rs  sbp_reader.rs  txt_reader.rs
src/core/song/: row.rs
src/core/song_library/: lib_functions.rs
src/file_reader/: chordpro_reader.rs  sbp_reader.rs  txt_reader.rs
src/song/: block.rs  chord.rs  row.rs  tab.rs
src/song_library/: lib_functions.rs
src/tui/: config.rs  lib_event_handler.rs  screen_painter.rs  song_event_handler.rs  song_formater.rs
