[package]
name = "songbook"
version = "0.1.0"
edition = "2024"

[lib]
name = "songbook"
path = "src/lib.rs"

[[bin]]
name = "songbook"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.5.56", features = ["derive"], optional = true }
ratatui = { version = "0.30.0", optional = true }

[features]
default = []
cli = ["dep:clap"]
tui = ["dep:ratatui", "cli"]
