[package]
name = "songbook"
version = "0.1.0"
edition = "2024"

[lib]
name = "songbook"
path = "src/lib.rs"

[[bin]]
name = "songbook"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.5.56", features = ["derive"], optional = true }
ratatui = { version = "0.30.0", optional = true }
dirs = { version = "6.0.0", optional = true }
colored = { version = "3.1.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
terminal_size = "0.4.3"

[features]
default = []
song_library = ["dep:dirs", "dep:colored"]
cli = ["dep:clap", "song_library"]
tui = ["dep:ratatui", "cli"]
