[package]
name = "songbook"
version = "0.1.0"
edition = "2024"

[lib]
name = "songbook"
path = "src/lib.rs"

[[bin]]
name = "songbook"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.5.56", features = ["derive"], optional = true }
ratatui = { version = "0.30.0", optional = true }
dirs = { version = "6.0.0", optional = true }
edit = { version = "0.1.5", optional = true }
rfd = { version = "0.17.2", features = ["gtk3"], default-features = false, optional = true }
toml = { version = "1.0.3", optional = true }
include_dir = { version = "0.7.4", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
crossterm = "0.29.0"
anyhow = "1.0.100"

[features]
default = []
song_library = ["dep:dirs", "dep:edit", "dep:include_dir", "dep:serde_yaml"]
cli = ["dep:clap", "song_library"]
tui = ["dep:ratatui", "dep:rfd", "dep:toml", "cli"]
